# ticker

./: Cargo.toml  Dockerfile
src/: main.rs
