[package]
name = "ticker"
version = "0.1.0"
authors = ["Yoonho Go <lylisha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }